--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/rahulshah456/dev-portfolio#readme",
   "dependencies": {
     "bootstrap": "^4.5.3",
-    "tilt.js": "^1.2.1",
-    "typed.js": "^2.0.11"
+    "popper.js": "^1.16.1"
   }
 }
