--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "bootstrap": "^4.5.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "googleapis": "^88.2.0",
     "nodemailer": "^6.6.5",
-    "popper.js": "^1.16.1",
-    "xoauth2": "^1.2.0"
+    "popper.js": "^1.16.1"
   }
 }
